Allow diable cameras without remove them..
